Mostly done with Hourglass Correction

--- a/run_12_vernier_analysis_note/vernier/main/makefile
+++ b/run_12_vernier_analysis_note/vernier/main/makefile
@@ -15,11 +15,11 @@ type -P rubber &>/dev/null
 if [ $? = 0 ]; then 
  rubber -dv $root
 else
- pdflatex $root
+ pdflatex $root # get the paper
  bibtex $root
- pdflatex $root
+ pdflatex $root # get the table of contents
  bibtex $root
- pdflatex $root
+ pdflatex $root # get the biliography
 fi
 
 rm -f *.aux *.log *.blg *.bbl *.toc *.lot *.lof *.out *.brf
