--- a/run_12_vernier_analysis_note/.gitignore
+++ b/run_12_vernier_analysis_note/.gitignore
@@ -1,8 +1,8 @@
-./main.brf
-./main.toc
-./main.blg
-./main.pdf
-./main.log
-./main.bbl
-./main.aux
-./main.out
+main.brf
+main.toc
+main.blg
+main.pdf
+main.log
+main.bbl
+main.aux
+main.out
